# esp-qcloud

./: CMakeLists.txt  LICENSE  Makefile  README.md  sdkconfig.old
components/qcloud_iot/: CMakeLists.txt
components/qcloud_iot/qcloud_iot_c_sdk/include/: config.h  platform.h
main/: CMakeLists.txt  app_main.c  board_ops.c  chatGPT分析报告.md
